@@ -1,6 +1,7 @@
 VERSION 0.35 (2019-01-??)
   * 'docker pack' command added. It copies project pack into running docker
     RSuite build container.
+  * #181: installing RSuiteStudio fixed with 'install' command
 
 VERSION 0.34 (2018-12-13)
   * Then installing RSuite on Windows it prevents installing source packages
